# PrefScope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.md
docs/explanation/: architecture.md  diagnosis-math.md  naming-and-fidelity.md  representations.md  sae.md  the-lens.md
docs/extending/: add-a-clusterer.md  add-a-dataset.md  add-a-representation.md  add-a-verifier.md  add-an-interpreter.md  add-an-sae.md  the-registry.md
docs/how-to/: bring-your-own-dataset.md  build-and-analyze-a-lens.md  diagnose-a-model.md  report-a-model.md
docs/reference/: cli.md  components.md  config-schema.md  glossary.md  lens-directory.md  python-api.md  status.md  viewer-bundle.md
docs/tutorials/: getting-started.md  your-first-lens.md
examples/: make_sample_corpus.py  pipeline.yaml  quickstart.yaml  research.yaml  sample_corpus.parquet
prefscope/: __init__.py  __main__.py  artifacts.py  config.py  py.typed
prefscope/activations/: cache.py  extract.py  summarize.py  train.py
prefscope/adapters/: __init__.py  dataset_openjury.py  dataset_table.py  representations.py
prefscope/analysis/: __init__.py  coactivation.py  dataset.py  elicitation.py  omission.py  preference.py  run.py  sae_metrics.py  stats.py
prefscope/api/: __init__.py  config.py  loaded_lens.py
prefscope/core/: __init__.py  dataset.py  manifest.py  registry.py  representation.py  sources.py  types.py
prefscope/data/: arenas.py  corpus.py  ingest.py  orient.py  pair_schema.py
prefscope/encode/: build.py  cache.py  embed.py  sae.py  shards.py
prefscope/interpret/: _parallel.py  io.py  llm.py  name.py  prompt_name.py  prompts.py  select.py  strategy.py  verify.py
prefscope/interpret/prompts/: abbreviate-concept.txt  interpret-feature-top-pairs.txt  interpret-individual-feature.txt  interpret-prompt-feature.txt  pairwise-annotate-singleconcept.txt  verify-single-concept-response.txt  verify-single-concept.txt
prefscope/pipeline/: build_lens.py  cluster.py  diagnose.py  elicit.py  encode_dataset.py  inspect.py  lens_rep.py  oriented_bank.py  prompt_delta.py  report.py  run.py  validate.py  winrelevance.py
prefscope/sae/: __init__.py  model.py  train.py  whiten.py
prefscope/viewer/: __init__.py  app.py  data.py
prefscope/viewer_export/: __init__.py  cli.py  diagnosis.py  examples.py  features.py  maps.py  sanitize.py  tables.py
scripts/: analyze_battle.py  auto_undesirable_length.py  bias_screen.py  build_dataset_overlay.py  cluster_gap_check.py  conditional_omissions.py  conditional_split_half.py  diagnose_dataset.py  diagnose_dataset_prompts.py  diagnose_dataset_regions.py  export_model_compare.py  export_omissions.py  export_viewer_data.py  judgearena_compare.py  judgearena_to_corpus.py  label_feature_types.py  lmsys_concept_pipeline.py  make_shuffled_names.py  project_prompt_lens.py  prompt_coactivation.py  resume_naming.py  validate_loo_length_ablation.py  win_relevance_by_language.py
scripts/examples/: 01_train_lenses.py  02_interpret_lens.py  03_cluster_and_winrelevance.py  04_name_prompts.py  README.md
tests/: test_activations_cache.py  test_activations_extract.py  test_activations_summarize.py  test_adapter_openjury.py  test_adapter_representations.py  test_adapter_table.py  test_analysis_dataset.py  test_analysis_preference.py  test_analysis_run.py  test_api_config.py  test_arenas.py  test_artifact_safety.py  test_artifacts.py  test_build.py  test_build_lens.py  test_cache.py  test_cli.py  test_cli_activations.py  test_cli_corpus.py  test_cli_diagnose.py  test_cli_interpret.py  test_cli_prompt_lens.py  test_cli_smoke.py  test_cluster_examples.py  test_cluster_mi_leiden.py  test_cluster_strategy.py  test_cluster_win_relevance.py  test_conditional_win_relevance.py  test_core_registry.py  test_core_types.py  test_corpus.py  test_diagnose.py  test_diagnose_bank.py  test_elicit_pipeline.py  test_embed.py  test_encode_dataset.py  test_export_diagnosis.py  test_export_prompt_map.py  test_export_response_map.py  test_ingest.py  (+36 more)
